@@ -1,3 +1,7 @@
+2003-01-06    <johan@balder>
+
+	* src/SDCCicode.c: fixed array add
+
 2002-01-05  Bernhard Held <bernhard@bernhardheld.de>
 	* sim/ucsim/z80.src/inst.cc: #include <stdarg.h> for gcc 3.2
 
